--- a/2TS_ReLU_1d_unbiased/Experiment.ipynb
+++ b/2TS_ReLU_1d_unbiased/Experiment.ipynb
@@ -198,7 +198,7 @@
     "criterion = TwoTimescaleCriterion(lmbda, regularization_function)\n",
     "\n",
     "## one projection to set-up outer layer\n",
-    "projection = ExactRidgeProjection(lmbda)\n",
+    "projection = ExactRidgeProjectionUnbiased(lmbda)\n",
     "inputs, targets = next(iter(train_loader))\n",
     "projection(inputs, targets, student, requires_grad=True)\n",
     "#student.outer.weight = nn.Parameter(data=torch.ones_like(student.outer.weight), requires_grad=True) ## student outer weight\n",
