--- a/VarPro_ReLU_1d/Experiment.ipynb
+++ b/VarPro_ReLU_1d/Experiment.ipynb
@@ -2,14 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/Users/rbarboni/miniforge3/lib/python312.zip',\n",
+       " '/Users/rbarboni/miniforge3/lib/python3.12',\n",
+       " '/Users/rbarboni/miniforge3/lib/python3.12/lib-dynload',\n",
+       " '',\n",
+       " '/Users/rbarboni/miniforge3/lib/python3.12/site-packages',\n",
+       " '..']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sys.path"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING: using cpu, computation may be slow !\n"
+     "ename": "ImportError",
+     "evalue": "dlopen(/Users/rbarboni/miniforge3/lib/python3.12/site-packages/torch/_C.cpython-312-darwin.so, 0x0002): Library not loaded: @rpath/libgfortran.5.dylib\n  Referenced from: <CAA510D4-816A-34E5-9021-485EF5D56159> /Users/rbarboni/miniforge3/lib/libopenblas.0.dylib\n  Reason: tried: '/Users/rbarboni/miniforge3/lib/libgfortran.5.dylib' (duplicate LC_RPATH '@loader_path'), '/Users/rbarboni/miniforge3/lib/libgfortran.5.dylib' (duplicate LC_RPATH '@loader_path'), '/Users/rbarboni/miniforge3/lib/libgfortran.5.dylib' (duplicate LC_RPATH '@loader_path'), '/Users/rbarboni/miniforge3/lib/libgfortran.5.dylib' (duplicate LC_RPATH '@loader_path'), '/Users/rbarboni/miniforge3/lib/libgfortran.5.dylib' (duplicate LC_RPATH '@loader_path'), '/Users/rbarboni/miniforge3/lib/libgfortran.5.dylib' (duplicate LC_RPATH '@loader_path'), '/Users/rbarboni/miniforge3/lib/libgfortran.5.dylib' (duplicate LC_RPATH '@loader_path'), '/Users/rbarboni/miniforge3/lib/libgfortran.5.dylib' (duplicate LC_RPATH '@loader_path'), '/Users/rbarboni/miniforge3/lib/python3.12/site-packages/torch/lib/libgfortran.5.dylib' (no such file), '/Users/rbarboni/miniforge3/lib/python3.12/site-packages/torch/../../../libgfortran.5.dylib' (duplicate LC_RPATH '@loader_path'), '/Users/rbarboni/miniforge3/lib/python3.12/site-packages/torch/lib/libgfortran.5.dylib' (no such file), '/Users/rbarboni/miniforge3/lib/python3.12/site-packages/torch/../../../libgfortran.5.dylib' (duplicate LC_RPATH '@loader_path'), '/Users/rbarboni/miniforge3/bin/../lib/libgfortran.5.dylib' (duplicate LC_RPATH '@loader_path'), '/Users/rbarboni/miniforge3/bin/../lib/libgfortran.5.dylib' (duplicate LC_RPATH '@loader_path'), '/usr/local/lib/libgfortran.5.dylib' (no such file), '/usr/lib/libgfortran.5.dylib' (no such file, not in dyld cache)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msys\u001b[39;00m\n\u001b[32m      2\u001b[39m sys.path.append(\u001b[33m'\u001b[39m\u001b[33m..\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mVarPro\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m *\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/GitHub/VarPro/VarPro_ReLU_1d/../VarPro.py:1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtorch\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtorch\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mnn\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnn\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/miniforge3/lib/python3.12/site-packages/torch/__init__.py:405\u001b[39m\n\u001b[32m    403\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m USE_GLOBAL_DEPS:\n\u001b[32m    404\u001b[39m         _load_global_deps()\n\u001b[32m--> \u001b[39m\u001b[32m405\u001b[39m     \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtorch\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01m_C\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m *  \u001b[38;5;66;03m# noqa: F403\u001b[39;00m\n\u001b[32m    408\u001b[39m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mSymInt\u001b[39;00m:\n\u001b[32m    409\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    410\u001b[39m \u001b[33;03m    Like an int (including magic methods), but redirects all operations on the\u001b[39;00m\n\u001b[32m    411\u001b[39m \u001b[33;03m    wrapped node. This is used in particular to symbolically record operations\u001b[39;00m\n\u001b[32m    412\u001b[39m \u001b[33;03m    in the symbolic shape workflow.\u001b[39;00m\n\u001b[32m    413\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n",
+      "\u001b[31mImportError\u001b[39m: dlopen(/Users/rbarboni/miniforge3/lib/python3.12/site-packages/torch/_C.cpython-312-darwin.so, 0x0002): Library not loaded: @rpath/libgfortran.5.dylib\n  Referenced from: <CAA510D4-816A-34E5-9021-485EF5D56159> /Users/rbarboni/miniforge3/lib/libopenblas.0.dylib\n  Reason: tried: '/Users/rbarboni/miniforge3/lib/libgfortran.5.dylib' (duplicate LC_RPATH '@loader_path'), '/Users/rbarboni/miniforge3/lib/libgfortran.5.dylib' (duplicate LC_RPATH '@loader_path'), '/Users/rbarboni/miniforge3/lib/libgfortran.5.dylib' (duplicate LC_RPATH '@loader_path'), '/Users/rbarboni/miniforge3/lib/libgfortran.5.dylib' (duplicate LC_RPATH '@loader_path'), '/Users/rbarboni/miniforge3/lib/libgfortran.5.dylib' (duplicate LC_RPATH '@loader_path'), '/Users/rbarboni/miniforge3/lib/libgfortran.5.dylib' (duplicate LC_RPATH '@loader_path'), '/Users/rbarboni/miniforge3/lib/libgfortran.5.dylib' (duplicate LC_RPATH '@loader_path'), '/Users/rbarboni/miniforge3/lib/libgfortran.5.dylib' (duplicate LC_RPATH '@loader_path'), '/Users/rbarboni/miniforge3/lib/python3.12/site-packages/torch/lib/libgfortran.5.dylib' (no such file), '/Users/rbarboni/miniforge3/lib/python3.12/site-packages/torch/../../../libgfortran.5.dylib' (duplicate LC_RPATH '@loader_path'), '/Users/rbarboni/miniforge3/lib/python3.12/site-packages/torch/lib/libgfortran.5.dylib' (no such file), '/Users/rbarboni/miniforge3/lib/python3.12/site-packages/torch/../../../libgfortran.5.dylib' (duplicate LC_RPATH '@loader_path'), '/Users/rbarboni/miniforge3/bin/../lib/libgfortran.5.dylib' (duplicate LC_RPATH '@loader_path'), '/Users/rbarboni/miniforge3/bin/../lib/libgfortran.5.dylib' (duplicate LC_RPATH '@loader_path'), '/usr/local/lib/libgfortran.5.dylib' (no such file), '/usr/lib/libgfortran.5.dylib' (no such file, not in dyld cache)"
      ]
     }
    ],
