--- a/VarPro_resnet/Experiment.ipynb
+++ b/VarPro_resnet/Experiment.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING: using cpu, computation may be slow !\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append('..')\n",
@@ -13,16 +21,16 @@
     "from resnet import *\n",
     "import torchvision\n",
     "import torchvision.transforms.v2 as transforms\n",
-    "import torchmetrics"
+    "from torchinfo import summary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "resnet = ResNet18(in_channels=1)"
+    "resnet = ResNet9(in_channels=3, num_classes=10)"
    ]
   },
   {
