--- a/VarPro_resnet/Experiment.ipynb
+++ b/VarPro_resnet/Experiment.ipynb
@@ -21,7 +21,8 @@
     "from resnet import *\n",
     "import torchvision\n",
     "import torchvision.transforms.v2 as transforms\n",
-    "from torchinfo import summary"
+    "from torchinfo import summary\n",
+    "import torch_optimizer"
    ]
   },
   {
@@ -30,7 +31,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "resnet = SimpleResNet20(in_channels=3, num_classes=10)"
+    "resnet = ResNet20(in_channels=3, num_classes=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer = torch_optimizer.Shampoo(resnet.parameters(), lr=1e-3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer.step()"
    ]
   },
   {
@@ -45,7 +64,7 @@
        "Layer (type:depth-idx)                        Output Shape              Param #\n",
        "===============================================================================================\n",
        "VarProModel                                   [128, 10]                 --\n",
-       "├─SimpleResNetFeatureModel: 1-1               [128, 64]                 --\n",
+       "├─ResNetFeatureModel: 1-1                     [128, 64]                 --\n",
        "│    └─Conv2d: 2-1                            [128, 16, 32, 32]         432\n",
        "│    └─BatchNorm2d: 2-2                       [128, 16, 32, 32]         32\n",
        "│    └─Sequential: 2-3                        [128, 16, 32, 32]         --\n",
@@ -60,11 +79,11 @@
        "│    │    └─BasicBlock: 3-7                   [128, 64, 8, 8]           57,728\n",
        "│    │    └─BasicBlock: 3-8                   [128, 64, 8, 8]           73,984\n",
        "│    │    └─BasicBlock: 3-9                   [128, 64, 8, 8]           73,984\n",
-       "├─Linear: 1-2                                 [128, 10]                 (640)\n",
+       "├─Linear: 1-2                                 [128, 10]                 640\n",
        "===============================================================================================\n",
        "Total params: 272,464\n",
-       "Trainable params: 271,824\n",
-       "Non-trainable params: 640\n",
+       "Trainable params: 272,464\n",
+       "Non-trainable params: 0\n",
        "Total mult-adds (Units.GIGABYTES): 5.22\n",
        "===============================================================================================\n",
        "Input size (MB): 1.57\n",
@@ -103,6 +122,39 @@
     "                                        transform=transform_train)\n",
     "\n",
     "train_loader = torch.utils.data.DataLoader(trainset, batch_size=128, shuffle=True, num_workers=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr = 0.1\n",
+    "lr_outer = 1\n",
+    "\n",
+    "optimizer = torch.optim.SGD(resnet.feature_model.parameters(), lr=lr)\n",
+    "optimizer.add_param_group({'lr':lr_outer, 'params': resnet.outer.weight})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "63"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(optimizer.param_groups[0]['params'])"
    ]
   },
   {
