--- a/Results_SHL.ipynb
+++ b/Results_SHL.ipynb
@@ -43,7 +43,7 @@
    "outputs": [],
    "source": [
     "epochs = 32000 # number of epochs\n",
-    "seed_list = [0, 1, 2, 3, 4, 5] # seeds over which to average"
+    "seed_list = [0] # seeds over which to average"
    ]
   },
   {
