--- a/1d_animations.ipynb
+++ b/1d_animations.ipynb
@@ -29,29 +29,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d7eea727",
    "metadata": {},
    "outputs": [],
    "source": [
-    "seed_list = [0, 1, 2, 3, 4, 5]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "34e465a3",
-   "metadata": {},
-   "source": [
-    "# Exact solution in 1d"
+    "# random seeds on which experiments have been performed\n",
+    "seed_list = [0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "3605b1d2",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Loading solution to the diffusion equation\n",
     "path = 'diffusion_relu1d_gamma100_ts-10.pkl.gz'\n",
     "with gzip.open(path, 'rb') as f:\n",
     "    diffusion = pickle.load(f)"
@@ -59,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "f956e8f1",
    "metadata": {},
    "outputs": [
@@ -72,6 +66,7 @@
     }
    ],
    "source": [
+    "# Loading results of the experiments with VarPro\n",
     "dict = {}\n",
     "\n",
     "for seed in tqdm(seed_list):\n",
@@ -177,87 +172,6 @@
     "writer = animation.PillowWriter(fps=10)\n",
     "anim.save(\"diffusion_animation_kde.gif\", writer=writer)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "ec63d2aa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = np.empty(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "a9b9dbb0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([], dtype=float64)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "baf18e2a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1., 2., 3.])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.append(x, [1, 2, 3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "12f0f84b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([], dtype=float64)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "31323e1e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
