--- a/1d_animations.ipynb
+++ b/1d_animations.ipynb
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "4a7cab1e",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
    ],
    "source": [
     "writer = animation.PillowWriter(fps=10)\n",
-    "anim.save(\"diffusion_animation_kde.gif\", writer=writer)"
+    "anim.save(\"diffusion_animation.gif\", writer=writer)"
    ]
   }
  ],
