--- a/VarPro_ReLU_1d/Results_SHL.ipynb
+++ b/VarPro_ReLU_1d/Results_SHL.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "614fac5a",
    "metadata": {},
    "outputs": [],
@@ -19,10 +19,13 @@
     "import os\n",
     "import pickle\n",
     "from tqdm import tqdm\n",
-    "from Utilities import *\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "\n",
+    "from Utilities import *"
    ]
   },
   {
